--- a/src/sass/blocks/skafolding.scss
+++ b/src/sass/blocks/skafolding.scss
@@ -1,127 +1,170 @@
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+ul[class],
+ol[class] {
+    padding: 0;
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+ul[class],
+ol[class],
+li,
+figure,
+figcaption,
+blockquote,
+dl,
+dd {
+    margin: 0;
+}
+
+ul[class],
+ol[class] {
+    list-style: none;
 }
 
 html {
-  scroll-behavior: smooth;
+    scroll-behavior: smooth;
 }
 
 body {
-  min-width: 320px;
-  margin: 0;
-  padding: 0;
+    min-width: 320px;
+    min-height: 100vh;
+    margin: 0;
+    padding: 0;
 
-  font-family: $main-font;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-  color: $text;
+    font-family: $main-font;
+    font-size: 16px;
+    line-height: 1.5;
+    font-weight: 400;
+    color: $text;
+    text-rendering: optimizeSpeed;
 
-  background-color: #ffffff;
+    background-color: #ffffff;
+
+    scroll-behavior: smooth;
 }
 
-a {
-  text-decoration: none;
+a:not([class]) {
+    text-decoration: none;
+    text-decoration-skip-ink: auto;
 }
 
 img {
-  max-width: 100%;
-  height: auto;
+    max-width: 100%;
+    height: auto;
+    display: block;
 }
 
-ul {
-  margin: 0;
-  padding: 0;
+input,
+button,
+textarea,
+select {
+    font: inherit;
+}
 
-  list-style: none;
+/* Remove all animations and transitions for people that prefer not to see them */
+@media (prefers-reduced-motion: reduce) {
+    * {
+        animation-duration: 0.01ms !important;
+        animation-iteration-count: 1 !important;
+        transition-duration: 0.01ms !important;
+        scroll-behavior: auto !important;
+    }
 }
 
 .visually-hidden:not(:focus):not(:active),
 input[type="checkbox"].visually-hidden,
 input[type="radio"].visually-hidden {
-  position: absolute;
+    position: absolute;
 
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  padding: 0;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
 
-  white-space: nowrap;
+    white-space: nowrap;
 
-  border: 0;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
+    border: 0;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
 }
 
 .button {
-  position: relative;
-  overflow: hidden;
-  
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: fit-content;
-  height: 48px;
-  padding: 0 38px;
+    position: relative;
+    overflow: hidden;
 
-  font: inherit;
-  text-align: center;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-  text-transform: uppercase;
-  color: #ffffff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: fit-content;
+    height: 48px;
+    padding: 0 38px;
 
-  border: none;
-  border-radius: 0;
-  background-color: black;
-  cursor: pointer;
-  user-select: none;
+    font: inherit;
+    text-align: center;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 400;
+    text-transform: uppercase;
+    color: #ffffff;
 
-  &:hover {
-    @include transition;
+    border: none;
+    border-radius: 0;
+    background-color: black;
+    cursor: pointer;
+    user-select: none;
 
-    background-color: $accent;
-  }
+    &:hover {
+        @include transition;
 
-  &:active,
-  &:focus {
-    opacity: 0.6;
-  }
+        background-color: $accent;
+    }
+
+    &:active,
+    &:focus {
+        opacity: 0.6;
+    }
 }
 
 .h1 {
-  @include mobile-h1;
+    @include mobile-h1;
 }
 
 .h2 {
-  @include mobile-h2;
+    @include mobile-h2;
 }
 
 .h3 {
-  @include mobile-h3;
+    @include mobile-h3;
 }
 
 .input {
-  width: 100%;
-  height: 50px;
+    width: 100%;
+    height: 50px;
 
-  padding: 0;
-  padding-right: 5px;
-  padding-left: 25px;
+    padding: 0;
+    padding-right: 5px;
+    padding-left: 25px;
 
-  font: inherit;
-  font-size: 16px;
-  line-height: 20px;
-  font-weight: 400;
-  color: $text;
+    font: inherit;
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: 400;
+    color: $text;
 
-  border: none;
-  background-color: #ffffff;
-  border-radius: 0;
+    border: none;
+    background-color: #ffffff;
+    border-radius: 0;
 }
 
 input::-webkit-outer-spin-button,
@@ -134,141 +177,141 @@ input[type='number'] {
 }
 
 textarea {
-  resize: none;
+    resize: none;
 }
 
 .container {
-  width: 100%;
-  max-width: 1600px;
-  margin: 0 auto;
-  padding: 0 $mobile-padding;
+    width: 100%;
+    max-width: 1600px;
+    margin: 0 auto;
+    padding: 0 $mobile-padding;
 }
 
 ol {
-  counter-reset: myCounter;
+    counter-reset: myCounter;
 
-  margin: 0;
-  margin-bottom: 30px;
-  padding-left: 30px;
+    margin: 0;
+    margin-bottom: 30px;
+    padding-left: 30px;
 
-  list-style: none;
+    list-style: none;
 }
 
 ol.list li {
-  position: relative;
-  margin-bottom: 10px;
+    position: relative;
+    margin-bottom: 10px;
 
-  font-family: $main-font;
-  letter-spacing: 0.005em;
-  color: $text;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 24px;
+    font-family: $main-font;
+    letter-spacing: 0.005em;
+    color: $text;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
 }
 
 ol.list li::before {
-  counter-increment: myCounter;
-  content: counter(myCounter)".";
+    counter-increment: myCounter;
+    content: counter(myCounter)".";
 
-  width: auto;
-  height: auto;
-  display: inline-block;
-  padding-right: 10px;
-  
-  font-family: $main-font;
-  letter-spacing: 0.005em;
-  color: $accent;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 24px;
+    width: auto;
+    height: auto;
+    display: inline-block;
+    padding-right: 10px;
+
+    font-family: $main-font;
+    letter-spacing: 0.005em;
+    color: $accent;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 24px;
 }
 
 ul {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 
-  list-style: none;
+    list-style: none;
 }
 
 ul.list-vertical {
-  margin-bottom: 30px;
+    margin-bottom: 30px;
 }
 
 ul.list-vertical li {
-  position: relative;
-  margin-bottom: 20px;
-  padding-left: 30px;
-  padding-right: 30px;
-  letter-spacing: 0.005em;
-  color: #5d5d5d;
-  font-weight: 400;
+    position: relative;
+    margin-bottom: 20px;
+    padding-left: 30px;
+    padding-right: 30px;
+    letter-spacing: 0.005em;
+    color: #5d5d5d;
+    font-weight: 400;
 }
 
 ul.list-vertical li::before {
-  content: "";
+    content: "";
 
-  position: absolute;
-  top: 7px;
-  left: 0;
+    position: absolute;
+    top: 7px;
+    left: 0;
 
-  width: 20px;
-  height: 20px;
+    width: 20px;
+    height: 20px;
 
-  background-image: url("images/checked.png");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: contain;
+    background-image: url("images/checked.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
 }
 
 // @media (min-width: $tablet-width) {}
 
 @media (min-width: $desktop-width) {
-  .container {
-    padding: 0 $desktop-padding;
-  }
+    .container {
+        padding: 0 $desktop-padding;
+    }
 
-  .h1 {
-    @include desktop-h1;
-  }
+    .h1 {
+        @include desktop-h1;
+    }
 
-  .h2 {
-    @include desktop-h2;
-  }
+    .h2 {
+        @include desktop-h2;
+    }
 
-  .h3 {
-    @include desktop-h3;
-  }
+    .h3 {
+        @include desktop-h3;
+    }
 }
 
 @media (min-width: $xl-width) {
-  ol.list li {
-    margin-bottom: 18px;
+    ol.list li {
+        margin-bottom: 18px;
 
-    font-size: 18px;
-    line-height: 30px;
-  }
+        font-size: 18px;
+        line-height: 30px;
+    }
 
-  ol.list li::before {
-    font-size: 18px;
-    line-height: 30px;
-  }
+    ol.list li::before {
+        font-size: 18px;
+        line-height: 30px;
+    }
 
-  ul.list-vertical li {
-    padding-left: 50px;
+    ul.list-vertical li {
+        padding-left: 50px;
 
-    font-size: 18px;
-    line-height: 24px;
-  }
+        font-size: 18px;
+        line-height: 24px;
+    }
 
-  .h1 {
-    @include xl-h1;
-  }
+    .h1 {
+        @include xl-h1;
+    }
 
-  .h2 {
-    @include xl-h2;
-  }
+    .h2 {
+        @include xl-h2;
+    }
 
-  .h3 {
-    @include xl-h3;
-  }
+    .h3 {
+        @include xl-h3;
+    }
 }
