--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,8 +1,13 @@
-@import "normalize.scss";
-@import "fonts.scss";
-@import "variables.scss";
-@import "mixins.scss";
-@import "blocks/skafolding.scss";
+@import "helpers/normalize.scss";
+@import "helpers/smart-grid.scss";
+@import "helpers/fonts.scss";
+@import "helpers/variables.scss";
+@import "helpers/mixins.scss";
+@import "helpers/libs.scss";
+@import "helpers/skafolding.scss";
+@import "helpers/container.scss";
+@import "helpers/typography.scss";
+@import "helpers/btns.scss";
 @import "blocks/header.scss";
 @import "blocks/main.scss";
 @import "blocks/footer.scss";
@@ -10,3 +15,4 @@
 @import "blocks/animation.scss";
 @import "blocks/breadcrumbs.scss";
 @import "blocks/pagination.scss";
+@import "blocks/overlay.scss";
