--- a/src/sass/helpers/typography.scss
+++ b/src/sass/helpers/typography.scss
@@ -1,36 +1,36 @@
 h1,
 .h1 {
     margin-top: 0;
-    margin-bottom: $grid-unit*2;
+    margin-bottom: $unit*2;
     
     font-size: 30px;
-    line-height: $grid-unit*4;
+    line-height: $unit*4;
     color: $color-black;
     font-weight: 400;
 
     @include tablet-block {
-        margin-bottom: $grid-unit*3;
+        margin-bottom: $unit*3;
 
         font-size: 36px;
-        line-height: $grid-unit*5;
+        line-height: $unit*5;
     }
 
     @include md-block {
-        margin-bottom: $grid-unit*4;
+        margin-bottom: $unit*4;
 
         font-size: 60px;
-        line-height: $grid-unit*8;
+        line-height: $unit*8;
     }
 }
 
 h2,
 .h2 {
     margin-top: 0;
-    margin-bottom: $grid-unit;
+    margin-bottom: $unit;
 
     font-family: $font-primary;
     font-size: 26px;
-    line-height: $grid-unit*4;
+    line-height: $unit*4;
     color: $color-black;
     letter-spacing: 0.33px;
     font-weight: 300;
@@ -41,10 +41,10 @@ h2,
     }
 
     @include md-block {
-        margin-bottom: $grid-unit*2;
+        margin-bottom: $unit*2;
 
-        font-size: $grid-unit*6;
-        line-height: $grid-unit*6;
+        font-size: $unit*6;
+        line-height: $unit*6;
         letter-spacing: 0.61px;
     }
 }
@@ -52,12 +52,12 @@ h2,
 h3,
 .h3 {
     margin-top: 0;
-    margin-bottom: $grid-unit/2;
+    margin-bottom: $unit/2;
 
     font-family: $font-primary;
     font-size: 20px;
     font-weight: 300;
-    line-height: $grid-unit*3;
+    line-height: $unit*3;
     color: $color-black;
     letter-spacing: 0.25px;
 
@@ -65,15 +65,15 @@ h3,
         margin-bottom: 0;
 
         font-size: 22px;
-        line-height: $grid-unit*4;
+        line-height: $unit*4;
         letter-spacing: 0.28px;
     }
 
     @include md-block {
-        margin-bottom: $grid-unit*2;
+        margin-bottom: $unit*2;
 
         font-size: 34px;
-        line-height: $grid-unit*5;
+        line-height: $unit*5;
         letter-spacing: 0.43px;
     }
 }
@@ -85,18 +85,18 @@ h4,
     font-family: $font-primary;
     font-size: 18px;
     font-weight: 300;
-    line-height: $grid-unit*3;
+    line-height: $unit*3;
     color: $color-black;
     letter-spacing: 0.23px;
 
     @include tablet-block {
         font-size: 18px;
-        line-height: $grid-unit*3;
+        line-height: $unit*3;
     }
 
     @include md-block {
         font-size: 22px;
-        line-height: $grid-unit*4;
+        line-height: $unit*4;
         letter-spacing: 0.28px;
     }
 }
@@ -104,23 +104,23 @@ h4,
 h5,
 .h5 {
     margin-top: 0;
-    margin-bottom: $grid-unit/2;
+    margin-bottom: $unit/2;
 
     font-family: $font-primary;
     font-size: 16px;
-    line-height: $grid-unit*2;
+    line-height: $unit*2;
     font-weight: 300;
     color: $color-black;
 
     @include tablet-block {
         font-size: 16px;
-        line-height: $grid-unit*3;
+        line-height: $unit*3;
         letter-spacing: 0.2px;
     }
 
     @include md-block {
         font-size: 18px;
-        line-height: $grid-unit*4;
+        line-height: $unit*4;
         letter-spacing: 0.23px;
     }
 }
@@ -128,22 +128,22 @@ h5,
 h6,
 .h6 {
     margin-top: 0;
-    margin-bottom: $grid-unit/2;
+    margin-bottom: $unit/2;
 
     font-family: $font-primary;
     font-weight: 300;
     font-size: 14px;
-    line-height: $grid-unit*2;
+    line-height: $unit*2;
     color: $color-black;
 
     @include md-block {
-        line-height: $grid-unit*3;
+        line-height: $unit*3;
     }
 }
 
 table {
     display: block;
-    margin-bottom: $grid-unit*5;
+    margin-bottom: $unit*5;
     overflow-x: scroll;
 
     border: none;
@@ -174,18 +174,18 @@ table {
     td,
     th {
         min-width: 86px;
-        padding: $grid-unit*2;
+        padding: $unit*2;
         padding-left: 0;
 
         font-size: 14px;
-        line-height: $grid-unit*3;
+        line-height: $unit*3;
         letter-spacing: 0.18px;
         color: $color-text;
         text-align: left;
 
         &:first-child {
-            min-width: $grid-unit*9;
-            padding-left: $grid-unit*2;
+            min-width: $unit*9;
+            padding-left: $unit*2;
 
             text-align: center;
         }
@@ -202,22 +202,22 @@ table {
     @include tablet-block {
         display: table;
         overflow: hidden;
-        margin-bottom: $grid-unit*7;
+        margin-bottom: $unit*7;
 
         td,
         th {
             min-width: 95px;
-            padding-right: $grid-unit*5;
+            padding-right: $unit*5;
 
             &:first-child {
                 min-width: 95px;
-                padding-left: $grid-unit*5;
+                padding-left: $unit*5;
             }
         }
 
         td {
             &:last-child {
-                padding-right: $grid-unit*8;
+                padding-right: $unit*8;
             }
         }
     }
@@ -230,8 +230,8 @@ table {
             max-width: 300px;
             
             &:first-child {
-                min-width: $grid-unit*9;
-                padding-left: $grid-unit*4;
+                min-width: $unit*9;
+                padding-left: $unit*4;
             }
         }
     }
@@ -245,14 +245,14 @@ ul {
 }
 
 ul:not([class]) {
-    margin-bottom: $grid-unit*4;
+    margin-bottom: $unit*4;
 
     li {
         position: relative;
 
         margin: 0;
-        margin-bottom: $grid-unit*3;
-        padding-left: $grid-unit*3;
+        margin-bottom: $unit*3;
+        padding-left: $unit*3;
 
         font-weight: 300;
 
@@ -264,7 +264,7 @@ ul:not([class]) {
             content: '';
 
             position: absolute;
-            top: $grid-unit;
+            top: $unit;
             left: 0;
 
             display: block;
@@ -278,11 +278,11 @@ ul:not([class]) {
     }
 
     @include tablet-block {
-        margin-bottom: $grid-unit*4;
+        margin-bottom: $unit*4;
     }
 
     @include md-block {
-        margin-bottom: $grid-unit*7;
+        margin-bottom: $unit*7;
     }
 }
 
@@ -291,7 +291,7 @@ ol:not([class]) {
 
     margin: 0;
     padding-left: 0;
-    margin-bottom: $grid-unit*4;
+    margin-bottom: $unit*4;
 
     font-weight: 300;
 
@@ -303,8 +303,8 @@ ol:not([class]) {
         position: relative;
 
         margin: 0;
-        margin-bottom: $grid-unit*3;       
-        padding-left: $grid-unit*3;  
+        margin-bottom: $unit*3;       
+        padding-left: $unit*3;  
 
         &:last-of-type {
             margin-bottom: 0;
@@ -327,9 +327,9 @@ ol:not([class]) {
     ol {
         counter-reset: listStyle;
 
-        margin-top: $grid-unit*2;
-        margin-bottom: $grid-unit*2;
-        margin-left: $grid-unit;
+        margin-top: $unit*2;
+        margin-bottom: $unit*2;
+        margin-left: $unit;
 
         li {
             counter-increment: listStyle;
@@ -337,8 +337,8 @@ ol:not([class]) {
             position: relative;
 
             margin: 0;
-            margin-bottom: $grid-unit*3;
-            padding-left: $grid-unit*3;
+            margin-bottom: $unit*3;
+            padding-left: $unit*3;
 
             &:last-of-type {
                 margin-bottom: 0;
@@ -360,20 +360,20 @@ ol:not([class]) {
     }
 
     @include tablet-block {
-        margin-bottom: $grid-unit*4;
+        margin-bottom: $unit*4;
     }
 
     @include md-block {
-        margin-bottom: $grid-unit*7;
+        margin-bottom: $unit*7;
     }
 }
 
 p:not([class]) {
     margin: 0;
-    margin-bottom: $grid-unit*2;
+    margin-bottom: $unit*2;
 
     font-size: 14px;
-    line-height: $grid-unit*3;
+    line-height: $unit*3;
     font-weight: 300;
     letter-spacing: 0.18px;
     color: $color-text;
@@ -383,7 +383,7 @@ p:not([class]) {
     }
 
     @include tablet-block {
-        margin-bottom: $grid-unit*3;
+        margin-bottom: $unit*3;
     }
 }
 
